web/src/index.css
/* ... */
.btn--primary {
  background: var(--color-primary);
  color: #fff;
}

.btn--primary:hover {
  background: #f79661;
}

@media screen and (min-width: 1024px) {
  .btn {
    width: 210px;
  }
}

/* Inputs */
.input {
  background: #f8f8f8;
  border: 1px solid #ccc;
  color: #878787;
  font-family: "Myriad-Regular";
  font-size: 1.5rem;
  height: 54px;
  outline: 0;
  padding: 2.7rem 3.5rem;
}

::placeholder {
  color: #cdcbd7;
  font-size: 1.5rem;
}

.input--block {
  width: 100%;
}

@media screen and (min-width: 1024px) {
  .input {
    font-size: 1.6rem;
  }

  ::placeholder {
    font-size: 1.6rem;
  }
}

/* Grids */
.grid {
  display: grid;
}

@media screen and (min-width: 768px) {
  .grid--1x2 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media screen and (min-width: 1024px) {
  .grid--1x3 {
    grid-template-columns: repeat(3, 1fr);
  }
}

/* Blocks */
.block {
  padding: 6rem 2rem;
}

.block--light-gray {
  background-color: #f8f8f8;
}

.block__header {
  text-align: center;
}

.block__heading {
  margin-bottom: 80px;
  margin-top: 0;
}

.container {
  margin: 0 auto;
  max-width: 1140px;
}

/* Collapsibles */
.collapsible__header {
  display: flex;
  justify-content: space-between;
}

.collapsible__heading {
  margin-top: 0;
  font-size: 3rem;
}

.collapsible__chevron {
  transform: rotate(-90deg);
  transition: transform 0.5s;
}

.collapsible__content {
  max-height: 0;
  opacity: 0;
  overflow: hidden;
  transition: all 0.3s;
}

.collapsible--expanded .collapsible__content {
  max-height: 100vh;
  opacity: 1;
}

.collapsible--expanded .collapsible__chevron {
  transform: rotate(0);
}

/* Navbar */
.nav {
  align-items: center;
  background-color: #fff;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  padding: 1rem 2rem;
  z-index: 1;
}

.nav__brand {
  margin: 0;
  max-width: 120px;
}

.nav_phone {
  color: var(--color-primary);
  display: inline;
  font-family: "Myriad-Regular";
  font-size: 1.7rem;
  font-weight: bold;
  order: 0;
}

.nav__list {
  margin: 1rem 0;
  max-height: 0;
  opacity: 0;
  width: 100%;
}

.nav__item {
  border-bottom: 1px solid #ccc;
  padding: 0.7rem 2rem;
}

.nav__item > a {
  font-size: 1.7rem;
  text-transform: uppercase;
}

.nav__item > a:hover {
  color: #777475;
  transition: color 0.3s;
}

.nav__toggler {
  border-radius: 3px;
  cursor: pointer;
  opacity: 0.5;
  transition: box-shadow 0.3s;
}

.nav.collapsible--expanded .nav__toggler {
  box-shadow: 0 0 0 3px #f48c58;
  opacity: 1;
}

@media screen and (min-width: 768px) {
  .nav__toggler {
    display: none;
  }

  .nav__list {
    display: flex;
    max-height: 100vh;
    opacity: 1;
    width: auto;
  }

  .nav__item {
    border: 0;
    padding: 0.7rem 1.3rem;
  }

  .nav_phone {
    order: 3;
  }
}

/* Media */
.media {
  display: flex;
}

.media__image {
  margin-top: 1rem;
}

.media__body {
  font-size: 1.4rem;
  margin: 0 2rem;
}

.media__title {
  font-size: 2.4rem;
  font-weight: bold;
  margin-top: 0;
}

/* Testimonial */
.testimonial.media {
  align-items: center;
  flex-direction: column;
  font-family: "Myriad-Regular";
  font-size: 1.6rem;
  justify-content: space-between;
}

.testimonial.media .media__image {
  border-radius: 50%;
  display: block;
  max-height: 120px;
  max-width: 120px;
  overflow: hidden;
}

.testimonial.media .media__image > img {
  width: 100%;
}

.testimonial.media .media__brand {
  flex-basis: 60px;
  flex-grow: 0;
  margin-top: 20px;
}

.testimonial.media .media__brand a {
  max-width: 109px;
}

.testimonial.media .media__body {
  flex-grow: 1;
  margin-top: 10px;
  text-align: justify;
}

.testimonial.media .media__footer {
  align-self: flex-start;
  margin: 0 2rem;
}

.testimonial .media__footer-heading {
  font-size: 2rem;
  font-size: 2rem;
  margin: 0;
}

@media screen and (min-width: 694px) and (max-width: 1023px) {
  .media.testimonial {
    padding: 0 10%;
  }
}

/* Gallery */
.carrousel__slides {
  display: flex;
  overflow-x: scroll;
  scroll-behavior: smooth;
  scroll-snap-type: x mandatory;
  scrollbar-width: none;
  width: 100%;
}

.carrousel__slides::-webkit-scrollbar {
  display: none;
}

.carrousel__slides-item {
  align-items: center;
  border-radius: 10px;
  display: flex;
  flex-shrink: 0;
  font-size: 100px;
  justify-content: center;
  margin: 0 1rem;
  padding: 15px 10%;
  position: relative;
  scroll-snap-align: start;
  transform-origin: center center;
  transform: scale(1);
  transition: transform 0.5s;
  width: 100%;
}

.carrousel__slides-item  .carrousel__item {
  border-radius: 5px;
  width: 100%;
}

.carrousel__navigator {
  align-items: center;
  display: flex;
  justify-content: center;
  margin: 0 1rem;
}

.slider__thumbnails {
  display: flex;
  gap: 1rem;
  max-width: calc(200px + 1rem);
  overflow-x: scroll;
  scroll-behavior: smooth;
  scroll-snap-type: x mandatory;
  scrollbar-width: none;
}

.slider__thumbnails::-webkit-scrollbar {
  display: none;
}

.slider__thumbnails img {
  border-radius: 5px;
  border: 2px solid #ccc;
  display: flex;
  max-width: 100px;
  width: 100px;
}

.slider-item-active {
  border: 2px solid var(--color-primary);
  border-radius: 5px;
}

.slider__chevron {
  text-decoration: none;
  margin: 0 30px;
}

@media screen and (min-width: 768px) {
  .slider__thumbnails {
    grid-template-columns: repeat(10, 1fr);
  }
}

@media screen and (min-width: 481px) {
  .slider__thumbnails {
    max-width: calc(300px + 20px);
  }
}

@media screen and (min-width: 769px) {
  .slider__thumbnails {
    max-width: calc(500px + 40px);
  }
}

@media screen and (min-width: 1025px) {
  .slider__thumbnails {
    max-width: calc(800px + 70px);
  }
}

/* Hero Block */
.main-content {
  flex: 1;
}

.hero-block {
  background-image: url("../public/images/hero-background.png");
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  flex-direction: column;
  height: 100vh;
  justify-content: center;
  padding: 50px;
}
/* ... */

